Modifications déroulement de création d'un emailing (avant -> créer, fiche emailing, destinataire, suivi ; maintenant -> créer, destinataire, visualisation avec option edition)

--- a/langs/fr_FR/mailingreworked.lang
+++ b/langs/fr_FR/mailingreworked.lang
@@ -45,3 +45,6 @@ MyPageName = Nom de ma page
 #
 MyWidget = Mon widget
 MyWidgetDescription = Description de mon widget
+
+Visualization = Visualisation
+Edit = Editer Emailing
