Changement d'un trad + Virer mailingreworked du menu

--- a/langs/fr_FR/mailingreworked.lang
+++ b/langs/fr_FR/mailingreworked.lang
@@ -53,6 +53,7 @@ EditMail = Retour à l'édition
 Send = Valider l'envoi
 Edition = Édition
 BackToCibles = Afficher la liste des destinataires
+ModeleType = Type de modèle
 
 ModeleName = Nom du modèle
 
