Correction bug de modification d'un contact inactif le rendant actif + Test correction case commentaire tronquée sur Mac + refonte graphique de certains éléments de dcp + Correction bug recherche avec quote pour les partenaires

--- a/langs/fr_FR/mailingreworked.lang
+++ b/langs/fr_FR/mailingreworked.lang
@@ -58,7 +58,7 @@ ModeleType = Type de modèle
 ModeleName = Nom du modèle
 
 InformationLetter = Lettre d'information
-InfoAlert = Alerte Info
+InfoAlert = Notification
 SendAgain = Relance
 Invitation = Invitation
 
