--- a/langs/fr_FR/mailingreworked.lang
+++ b/langs/fr_FR/mailingreworked.lang
@@ -86,5 +86,6 @@ statsemailing=Statistiques Emailing
 statsemailingSetup=Paramétrages
 Statsemailing=Statistiques
 MonitoringMail = Suivi
+EmptyList = Vider la liste des destinataires de cet email
 
 
